--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           </div>
         </div>
       </section>
-      <section class="max-w-4xl mx-auto px-6 py-12 "id="obj">
+      <section class="max-w-4xl mx-auto px-6 py-12 ">
         <div class="bg-white shadow-lg rounded-lg overflow-hidden">
           <div class="bg-indigo-600 text-white text-center py-6">
             <h2 class="text-3xl font-bold">Course Objective</h2>
